--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.59
+Version: 2024.1.60
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -43,6 +43,10 @@ h6 {
 
 ul {
   list-style: none;
+}
+
+i {
+  font-size: 1.2rem;
 }
 
 /* CSS global variables to go here */
@@ -85,10 +89,6 @@ ul {
   color: #18181b;
 }
 
-.icon-btn i {
-  font-size: 1.2rem;
-}
-
 /* Universal page layout */
 #wrapper {
   height: 100%;
@@ -109,6 +109,43 @@ ul {
   /* 	height: 100vh; */
   /* Leave height: 100%; uncommented for now while the header and footer are on each page */
   padding: 48px 96px;
+}
+
+/* Header */
+.nav {
+  display: flex;
+  align-items: end;
+  gap: 24px;
+  padding: 16px 24px;
+  border-bottom: 1px solid #d4d4d8;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #71717a;
+  font-size: 1.1rem;
+  transition: 0.1s ease-out;
+}
+
+.nav__link:hover {
+  color: #18181b;
+}
+
+/* for home icon */
+.nav__link:first-child {
+  font-size: 1.2rem;
+}
+
+.nav__link + .nav__link {
+  position: relative;
+}
+
+.nav__link + .nav__link::before {
+  content: "/";
+  position: absolute;
+  top: 0;
+  left: -14px;
+  color: #71717a;
 }
 
 /* Home page */
