--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.140
+Version: 2024.1.141
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -186,24 +186,42 @@ i {
   color: #18181b;
 }
 
-/* Success message */
-.success-msg {
-  display: none;
-}
-
-.success-msg.active {
+/* PAGE NOTICE BANNER */
+.notice-banner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 8px;
-  border: 1px solid #86efac;
+  gap: 24px;
+  border: 1px solid;
   border-radius: 4px;
-  background-color: #dcfce7;
-  color: #22c55e;
+  padding: 12px 8px;
 }
 
-.success-msg__x-btn i {
+.notice-banner__msgs-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.notice-banner__msgs-list {
+  padding-left: 24px;
+  list-style-type: disc;
+}
+
+.notice-banner__x-btn i {
   font-size: 1rem;
+}
+
+.notice-banner.error {
+  background-color: #fecaca;
+  border-color: #ef4444;
+  color: #ef4444;
+}
+
+.notice-banner.success {
+  background-color: #dcfce7;
+  border-color: #86efac;
+  color: #22c55e;
 }
 
 /* List view pages (Servers, Websites, Redirects, Redirect Flags) */
