added production/test flags for websites

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.188
+Version: 2024.1.189
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -383,7 +383,7 @@ input[type="checkbox"]:checked::before {
 .list-view__item {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
   border: 1px solid var(--primary-border-color);
   border-radius: 4px;
@@ -395,6 +395,10 @@ input[type="checkbox"]:checked::before {
 .list-view__item:hover {
   border-color: var(--secondary-border-color);
   background-color: var(--secondary-bg-color);
+}
+
+.list-view__item__info {
+  flex-grow: 1;
 }
 
 .list-view__item__description {
