--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.259
+Version: 2024.1.260
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -122,7 +122,7 @@ button i {
   letter-spacing: 0.025rem;
   color: var(--default-btn-txt-color);
   background-color: var(--default-btn-bg-color);
-  transition: 0.1s ease-out;
+  /* transition: 0.1s ease-out; */
 }
 
 .default-btn:hover {
@@ -201,7 +201,7 @@ input[type="checkbox"]:checked::before {
   background: none;
   padding: 2px;
   color: var(--primary-link-color);
-  transition: 0.1s ease-out;
+  /* transition: 0.1s ease-out; */
 }
 
 .icon-btn:hover {
@@ -245,7 +245,7 @@ input[type="checkbox"]:checked::before {
   text-decoration: none;
   color: var(--primary-link-color);
   font-size: 1.1rem;
-  transition: 0.1s ease-out;
+  /* transition: 0.1s ease-out; */
 }
 
 .nav__link:hover {
@@ -389,7 +389,7 @@ input[type="checkbox"]:checked::before {
   border: 1px solid var(--primary-border-color);
   border-radius: 4px;
   padding: 6px 8px;
-  transition: 0.2s ease-out;
+  /* transition: 0.2s ease-out; */
   gap: 6px;
 }
 
