--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.320
+Version: 2024.1.321
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -540,7 +540,9 @@ input[type="checkbox"]:checked::before {
 }
 
 .form__input-item textarea {
-  height: 4rem;
+  height: 5rem;
+  resize: none;
+  overflow: auto;
 }
 
 .form__input-item input::placeholder,
